--- a/src/styles/Error404.css
+++ b/src/styles/Error404.css
@@ -1,23 +1,15 @@
-.error-msg-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 900px;
-    color: #FF6060;
-}
-
-.error-msg-404 {
-    font-size: 288px;
-}
-
-.error-msg-details {
-    font-size: 36px;
-}
-
 .homepage-link {
     font-size: 18px;
+    text-decoration: none;
+    color: #FF6060;
 }
 
 .homepage-link:hover {
     border-bottom: #FF6060 1px solid;
+}
+
+@media (max-width: 500px) {
+    .homepage-link {
+        font-size: 14px;
+      }
 }
