add active border depending on pathname

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,4 +5,8 @@
 
 .nav-list-link:hover {
     border-bottom: 1px solid #ff6060;
+}
+
+.nav-list-link.active {
+    border-bottom: 1px solid #ff6060;
 } 
